// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Db query ajlb get tests from date should return expected ajlbs 1`] = `
[
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 5,
    "seqNo": 3,
    "startDate": "2025-05-01",
    "startFlightMins": 800000,
    "startFlightTime": "13333:20",
    "startLandings": 0,
    "startPage": 600,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 602,
      "newFlightsCount": 0,
      "newFlightsPage": 602,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "13336:20",
      "validatedBeforeUTC": "2025-05-03T11:20:00.000Z",
      "validatedFlightsCount": 3,
      "validatedFlightsTime": "3:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "13336:20",
    },
  },
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2025-04-30",
    "noOfPages": 90,
    "rowsPerPage": 11,
    "seqNo": 2,
    "startDate": "2025-04-04",
    "startFlightMins": 367000,
    "startFlightTime": "6116:40",
    "startLandings": 0,
    "startPage": 81,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 81,
      "newFlightsCount": 0,
      "newFlightsPage": 81,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "6118:40",
      "validatedBeforeUTC": "2025-03-02T11:30:00.000Z",
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "6118:40",
    },
  },
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 5,
    "seqNo": 3,
    "startDate": "2025-06-01",
    "startFlightMins": 700000,
    "startFlightTime": "11666:40",
    "startLandings": 0,
    "startPage": 500,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 518,
      "newFlightsCount": 43,
      "newFlightsPage": 500,
      "newFlightsTime": "56:30",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "11723:10",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "11666:40",
    },
  },
]
`;

exports[`Db query ajlb get tests should return IHQ ajlbs 1`] = `
[
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2025-04-04",
    "noOfPages": 80,
    "rowsPerPage": 11,
    "seqNo": 1,
    "startDate": "2024-04-03",
    "startFlightMins": 2445,
    "startFlightTime": "40:45",
    "startLandings": 0,
    "startPage": 1,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 1,
      "newFlightsCount": 0,
      "newFlightsPage": 1,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "40:45",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "40:45",
    },
  },
]
`;

exports[`Db query ajlb get tests should return STL ajlbs 1`] = `
[
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 5,
    "seqNo": 3,
    "startDate": "2025-06-01",
    "startFlightMins": 700000,
    "startFlightTime": "11666:40",
    "startLandings": 0,
    "startPage": 500,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 518,
      "newFlightsCount": 43,
      "newFlightsPage": 500,
      "newFlightsTime": "56:30",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "11723:10",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "11666:40",
    },
  },
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2025-05-31",
    "noOfPages": 120,
    "rowsPerPage": 11,
    "seqNo": 2,
    "startDate": "2024-04-02",
    "startFlightMins": 286700,
    "startFlightTime": "4778:20",
    "startLandings": 0,
    "startPage": 10,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 10,
      "newFlightsCount": 3,
      "newFlightsPage": 10,
      "newFlightsTime": "5:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "4783:20",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "4778:20",
    },
  },
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2024-04-02",
    "noOfPages": 100,
    "rowsPerPage": 12,
    "seqNo": 1,
    "startDate": "2023-04-01",
    "startFlightMins": 610,
    "startFlightTime": "10:10",
    "startLandings": 0,
    "startPage": 1,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 33,
      "newFlightsCount": 2,
      "newFlightsPage": 33,
      "newFlightsTime": "6:49",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "361:50",
      "validatedBeforeUTC": "2010-06-15T03:33:00.000Z",
      "validatedFlightsCount": 191,
      "validatedFlightsTime": "343:48",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "355:01",
    },
  },
]
`;

exports[`Db query ajlb get tests should return all ajlbs 1`] = `
[
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2025-04-30",
    "noOfPages": 150,
    "rowsPerPage": 10,
    "seqNo": 10,
    "startDate": "2022-01-01",
    "startFlightMins": 0,
    "startFlightTime": "0:00",
    "startLandings": 0,
    "startPage": 200,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 202,
      "newFlightsCount": 0,
      "newFlightsPage": 202,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "14:15",
      "validatedBeforeUTC": "2025-01-15T10:25:00.000Z",
      "validatedFlightsCount": 10,
      "validatedFlightsTime": "14:15",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "14:15",
    },
  },
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 5,
    "seqNo": 3,
    "startDate": "2025-05-01",
    "startFlightMins": 800000,
    "startFlightTime": "13333:20",
    "startLandings": 0,
    "startPage": 600,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 602,
      "newFlightsCount": 0,
      "newFlightsPage": 602,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "13336:20",
      "validatedBeforeUTC": "2025-05-03T11:20:00.000Z",
      "validatedFlightsCount": 3,
      "validatedFlightsTime": "3:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "13336:20",
    },
  },
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2025-04-30",
    "noOfPages": 90,
    "rowsPerPage": 11,
    "seqNo": 2,
    "startDate": "2025-04-04",
    "startFlightMins": 367000,
    "startFlightTime": "6116:40",
    "startLandings": 0,
    "startPage": 81,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 81,
      "newFlightsCount": 0,
      "newFlightsPage": 81,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "6118:40",
      "validatedBeforeUTC": "2025-03-02T11:30:00.000Z",
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "6118:40",
    },
  },
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2025-04-04",
    "noOfPages": 80,
    "rowsPerPage": 11,
    "seqNo": 1,
    "startDate": "2024-04-03",
    "startFlightMins": 2445,
    "startFlightTime": "40:45",
    "startLandings": 0,
    "startPage": 1,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 1,
      "newFlightsCount": 0,
      "newFlightsPage": 1,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "40:45",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "40:45",
    },
  },
  {
    "aircraftRegistration": "OH-P28",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2025-07-01",
    "noOfPages": 10,
    "rowsPerPage": 5,
    "seqNo": 10,
    "startDate": "2025-04-01",
    "startFlightMins": 290000,
    "startFlightTime": "4833:20",
    "startLandings": 0,
    "startPage": 200,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 202,
      "newFlightsCount": 1,
      "newFlightsPage": 202,
      "newFlightsTime": "0:50",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "4836:40",
      "validatedBeforeUTC": "2025-04-02T03:10:00.000Z",
      "validatedFlightsCount": 2,
      "validatedFlightsTime": "1:40",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "4835:50",
    },
  },
  {
    "aircraftRegistration": "OH-P28",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 10,
    "seqNo": 4,
    "startDate": "2003-04-04",
    "startFlightMins": 313700,
    "startFlightTime": "5228:20",
    "startLandings": 0,
    "startPage": 81,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 83,
      "newFlightsCount": 19,
      "newFlightsPage": 81,
      "newFlightsTime": "35:25",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "5265:35",
      "validatedBeforeUTC": "2025-03-04T13:35:00.000Z",
      "validatedFlightsCount": 1,
      "validatedFlightsTime": "1:50",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "5230:10",
    },
  },
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 5,
    "seqNo": 3,
    "startDate": "2025-06-01",
    "startFlightMins": 700000,
    "startFlightTime": "11666:40",
    "startLandings": 0,
    "startPage": 500,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 518,
      "newFlightsCount": 43,
      "newFlightsPage": 500,
      "newFlightsTime": "56:30",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "11723:10",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "11666:40",
    },
  },
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2025-05-31",
    "noOfPages": 120,
    "rowsPerPage": 11,
    "seqNo": 2,
    "startDate": "2024-04-02",
    "startFlightMins": 286700,
    "startFlightTime": "4778:20",
    "startLandings": 0,
    "startPage": 10,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 10,
      "newFlightsCount": 3,
      "newFlightsPage": 10,
      "newFlightsTime": "5:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "4783:20",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "4778:20",
    },
  },
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2024-04-02",
    "noOfPages": 100,
    "rowsPerPage": 12,
    "seqNo": 1,
    "startDate": "2023-04-01",
    "startFlightMins": 610,
    "startFlightTime": "10:10",
    "startLandings": 0,
    "startPage": 1,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 33,
      "newFlightsCount": 2,
      "newFlightsPage": 33,
      "newFlightsTime": "6:49",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "361:50",
      "validatedBeforeUTC": "2010-06-15T03:33:00.000Z",
      "validatedFlightsCount": 191,
      "validatedFlightsTime": "343:48",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "355:01",
    },
  },
]
`;

exports[`Db query ajlb get tests should return all current ajlbs 1`] = `
[
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 5,
    "seqNo": 3,
    "startDate": "2025-05-01",
    "startFlightMins": 800000,
    "startFlightTime": "13333:20",
    "startLandings": 0,
    "startPage": 600,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 602,
      "newFlightsCount": 0,
      "newFlightsPage": 602,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "13336:20",
      "validatedBeforeUTC": "2025-05-03T11:20:00.000Z",
      "validatedFlightsCount": 3,
      "validatedFlightsTime": "3:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "13336:20",
    },
  },
  {
    "aircraftRegistration": "OH-P28",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 10,
    "seqNo": 4,
    "startDate": "2003-04-04",
    "startFlightMins": 313700,
    "startFlightTime": "5228:20",
    "startLandings": 0,
    "startPage": 81,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 83,
      "newFlightsCount": 19,
      "newFlightsPage": 81,
      "newFlightsTime": "35:25",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "5265:35",
      "validatedBeforeUTC": "2025-03-04T13:35:00.000Z",
      "validatedFlightsCount": 1,
      "validatedFlightsTime": "1:50",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "5230:10",
    },
  },
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 5,
    "seqNo": 3,
    "startDate": "2025-06-01",
    "startFlightMins": 700000,
    "startFlightTime": "11666:40",
    "startLandings": 0,
    "startPage": 500,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 518,
      "newFlightsCount": 43,
      "newFlightsPage": 500,
      "newFlightsTime": "56:30",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "11723:10",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "11666:40",
    },
  },
]
`;
